# my-life-moment

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.comate/specs/tauri-updater/: summary.md  tasks.md
.comate/specs/tray-popover/: doc.md  summary.md  tasks.md
.github/workflows/: release.yml
public/: manifest.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AcademicMode.tsx  AddEventModal.tsx  App.tsx  AppOptimized.tsx  ConferenceCard.tsx  ConferencePool.tsx  CountdownCard.tsx  CountdownList.tsx  LifeProgressCard.tsx  SyncDialog.tsx  UserSwitcher.tsx
src/data/: conferences-extended.ts  conferences.ts  emojis.ts
src/hooks/: useAppState.ts  useCountdowns.ts  useNotifications.ts  useSync.ts  useUpdater.ts  useUser.ts
src/lib/: app-state.test.ts  app-state.ts  countdown.test.ts  countdown.ts  external-links.ts  sync.test.ts  sync.ts
src/styles/: global.css
src/types/: index.ts
