[package]
name = "life-moment"
version = "0.1.0"
description = "记录生活中的美好时刻"
authors = ["Life Moment Team"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
