[package]
name = "life-moment"
version = "0.1.0"
description = "记录生活中的美好时刻"
authors = ["Life Moment Team"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
